--- a/ojs/locale/fa_IR/author.xml
+++ b/ojs/locale/fa_IR/author.xml
@@ -42,16 +42,16 @@
 {$supportName} تماس بگیرید. شماره تماس ({$supportPhone}</message>
 	<message key="author.submit.journalSection">نوع مقاله</message>
 	<message key="author.submit.journalSectionDescription"><![CDATA[نوع مقاله را انتخاب کنید. باری اطلاعات بیشتر به انواع مقالات و سیاست گذاری در <a href="{$aboutUrl}">درباره </a> مجله مراجعه کنید.]]></message>
-	<message key="author.submit.selectSection">لطفا نوع مقاله را انتخاب کنید.</message>
-	<message key="author.submit.submissionChecklist">چک لیست ساب میشن</message>
-	<message key="author.submit.submissionChecklistDescription">با پر کردن چک لیست زیر اعلام کنید که این ساب میشن برای بررسی دفتر مجله آماده اشت. در قسمت پائین این صفحه می توانید نقطه نظرات دلخواه خود را به اطلاع سردبیر برسانید.</message>
+	<message key="submission.submit.selectSection">لطفا نوع مقاله را انتخاب کنید.</message>
+	<message key="submission.submit.submissionChecklist">چک لیست ساب میشن</message>
+	<message key="submission.submit.submissionChecklistDescription">با پر کردن چک لیست زیر اعلام کنید که این ساب میشن برای بررسی دفتر مجله آماده اشت. در قسمت پائین این صفحه می توانید نقطه نظرات دلخواه خود را به اطلاع سردبیر برسانید.</message>
 	<message key="author.submit.verifyChecklist">قبل از ادامه کار اطمینان حاصل کنید که تمام موارد لازم برای ساب میشن که در چک لیست آمده است را رعایت کرده اید.</message>
 	<message key="author.submit.copyrightNoticeAgree">نویسنگان این مقاله موافقت خودشان را با این بیانیه کپی رایت اعلام می گنند. این بیانیه در صورت چاپ شدن این مقاله در این مجله قابل اعمال است. در قسمت پائین این صفحه نقطه نظرات دلخواه خود را به اطلاع سردبیر برسانید</message>
 	<message key="author.submit.copyrightNoticeAgreeRequired">قبل از ادامه ، می بایست با بیانیه کپی رایت موافقت کنید.</message>
-	<message key="author.submit.commentsForEditor">اعلام نقطه نظراتتان به سردبیر</message>
+	<message key="submission.submit.coverNote">اعلام نقطه نظراتتان به سردبیر</message>
 	<message key="author.submit.comments">متن نامه. اختیاری</message>
 	<message key="author.submit.form.sectionRequired">لطفا نوع مقاله خود را انتخاب کنید</message>
-	<message key="author.submit.privacyStatement">بیانیه محرمانگی اطلاعات مجله</message>
+	<message key="submission.submit.privacyStatement">بیانیه محرمانگی اطلاعات مجله</message>
 	<message key="author.submit.reorderInstructions">با استفاده از فلش ها ترتیب نام نویسندگان را تغییر دهید.</message>
 	<message key="author.submit.selectPrincipalContact">آدرس مرجع مکاتبات</message>
 	<message key="author.submit.addAuthor">افزودن نویسنده</message>
