--- a/ojs/locale/gl_ES/author.xml
+++ b/ojs/locale/gl_ES/author.xml
@@ -44,16 +44,16 @@
 	<message key="author.submit.howToSubmitNoPhone"><![CDATA[Tes problemas? Contacta con <a href="mailto:{$supportEmail}">{$supportName}</a> para solicitar axuda.]]></message>
 	<message key="author.submit.journalSection">Sección da revista</message>
 	<message key="author.submit.journalSectionDescription"><![CDATA[Escolle unha sección axeitada para o envio (vexa Seccións e Políticas en <a href="{$aboutUrl}" target="_new">Sobre</a> la revista).]]></message>
-	<message key="author.submit.selectSection">Escolle unha sección ...</message>
-	<message key="author.submit.submissionChecklist">Listaxe de comprobación de envío</message>
-	<message key="author.submit.submissionChecklistDescription">Indica que este envío está listo para ser considerado por esta revista marcando los siguientes puntos (a seguir podes facer comentarios ao/á editor/a).</message>
+	<message key="submission.submit.selectSection">Escolle unha sección ...</message>
+	<message key="submission.submit.submissionChecklist">Listaxe de comprobación de envío</message>
+	<message key="submission.submit.submissionChecklistDescription">Indica que este envío está listo para ser considerado por esta revista marcando los siguientes puntos (a seguir podes facer comentarios ao/á editor/a).</message>
 	<message key="author.submit.verifyChecklist">Debe asegurarse de que cumpre todos os requisitos de la lista antes de continuar</message>
 	<message key="author.submit.copyrightNoticeAgree">Os/as autores/as están de acordo cos termos desta nota de copyright, que se han aplicar ao teu envío se for publicado por esta revista (a seguir podes facer comentarios ao/á editor/a).</message>
 	<message key="author.submit.copyrightNoticeAgreeRequired">Antes de continuar debes aceptar os termos da nota de copyright.</message>
-	<message key="author.submit.commentsForEditor">Comentarios para o/a editor/a</message>
+	<message key="submission.submit.coverNote">Comentarios para o/a editor/a</message>
 	<message key="author.submit.comments">Insire o texto (opcional)</message>
 	<message key="author.submit.form.sectionRequired">Por favor, selecciona unha sección axeitada da revista para o envío.</message>
-	<message key="author.submit.privacyStatement">Política de privacidade da revista</message>
+	<message key="submission.submit.privacyStatement">Política de privacidade da revista</message>
 	<message key="author.submit.reorderInstructions">Reordenar autores/as por orde de aparición no artigo.</message>
 	<message key="author.submit.selectPrincipalContact">Contacto principal para correspondencia editorial.</message>
 	<message key="author.submit.addAuthor">Engadir autor/a</message>
