--- a/ojs/locale/id_ID/author.xml
+++ b/ojs/locale/id_ID/author.xml
@@ -47,19 +47,19 @@
 <message key="author.submit.howToSubmitNoPhone"><![CDATA[Menghadapi kesulitan? kontak<a href="mailto:{$supportEmail}">{$supportName}</a> untuk bantuan.]]></message> 
 	<message key="author.submit.journalSection">Bagian Jurnal</message> 
 	<message key="author.submit.journalSectionDescription"><![CDATA[Pilih bagian yang tepat untuk naskah ini (lihat Bagian dan Kebijakan di <a href="{$aboutUrl}" target="_new">Tentang</a> Kami).]]></message>	
-<message key="author.submit.selectSection">Silah pilih bagian...</message> 
+<message key="submission.submit.selectSection">Silah pilih bagian...</message> 
 	<message key="author.submit.submissionLocale">Bahasa Naskah</message> 
 	<message key="author.submit.submissionLocaleDescription">Jurnal ini menerima naskah dari beberapa bahasa. Pilih bahasa utama naskah dari menu di bawah ini.</message>	
-<message key="author.submit.submissionChecklist">Checklist Naskah</message> 
-	<message key="author.submit.submissionChecklistDescription"> Menunjukkan bahwa naskah ini siap untuk dipertimbangkan oleh jurnal dengan mengecek hal-hal di bawah ini (komentar untuk editor dapat ditambahkan di bawah).</message>	
+<message key="submission.submit.submissionChecklist">Checklist Naskah</message> 
+	<message key="submission.submit.submissionChecklistDescription"> Menunjukkan bahwa naskah ini siap untuk dipertimbangkan oleh jurnal dengan mengecek hal-hal di bawah ini (komentar untuk editor dapat ditambahkan di bawah).</message>	
 <message key="author.submit.verifyChecklist">Anda harus memastikan semua artikel tercantum dalam daftar nama naskah yang memuaskan sebelum dilanjutkan.</message>	
 <message key="author.submit.copyrightNoticeAgree">Penulis setuju dengan persyaratan hak cipta, yang akan berlaku pada penyerahan ini dan saat diterbitkan oleh jurnal (komentar untuk editor dapat ditambahkan dibawah).</message>
 <message key="author.submit.copyrightNoticeAgreeRequired">Anda harus setuju dengan persyaratan hak cipta sebelum melanjutkan</message>
-<message key="author.submit.commentsForEditor">Komentar untuk Editor</message> 
+<message key="submission.submit.coverNote">Komentar untuk Editor</message> 
 	<message key="author.submit.comments">Masukkan Teks(pilihan)</message> 
 	<message key="author.submit.form.sectionRequired">Pilih bagian jurnal yang sesuai untuk penyerahan ini.</message>	
 <message key="author.submit.form.localeRequired">Pilih bahasa penyeraha.</message> 
-	<message key="author.submit.privacyStatement">Pernyataan Privasi Jurnal</message>
+	<message key="submission.submit.privacyStatement">Pernyataan Privasi Jurnal</message>
 	<message key="author.submit.reorderInstructions">Mengurutkan nama penulis agar ditampilkan seperti urutan di daftar dalam penerbitan.</message> 
 	<message key="author.submit.reorder">Mengurutkan nama penulis</message> 
 	<message key="author.submit.selectPrincipalContact">Kontak Utama untuk Korespondensi Editorial.</message>	
