--- a/ojs/locale/ja_JP/author.xml
+++ b/ojs/locale/ja_JP/author.xml
@@ -42,16 +42,16 @@
 	<message key="author.submissions.noSubmissions">投稿物がありません。</message>
 	<message key="author.submit.howToSubmitNoPhone"><![CDATA[ご不明な点がございましたら、 <a href="mailto:{$supportEmail}">{$supportName}</a>にお問い合わせください。]]></message>
 	<message key="author.submit.journalSection">雑誌セクション</message>
-	<message key="author.submit.selectSection">セクションを選択してください。</message>
-	<message key="author.submit.submissionChecklist">投稿時のチェックリスト</message>
-	<message key="author.submit.submissionChecklistDescription">この投稿物が、雑誌が必要とする以下の項目を満たしていることを確認して、チェックしてください。&lt;br/&gt;（このページの最後で編集者へのコメントを書くことができます。）</message>
+	<message key="submission.submit.selectSection">セクションを選択してください。</message>
+	<message key="submission.submit.submissionChecklist">投稿時のチェックリスト</message>
+	<message key="submission.submit.submissionChecklistDescription">この投稿物が、雑誌が必要とする以下の項目を満たしていることを確認して、チェックしてください。&lt;br/&gt;（このページの最後で編集者へのコメントを書くことができます。）</message>
 	<message key="author.submit.verifyChecklist">投稿を続けるには、投稿物がチェックリストの全項目を満たしていることが必要です。</message>
 	<message key="author.submit.copyrightNoticeAgree">私（たち）は、投稿物がこの雑誌で出版される際に適用される上記の著作権表示条件に同意します。&lt;br/&gt;（このページの最後で編集者へのコメントを書くことができます。）</message>
 	<message key="author.submit.copyrightNoticeAgreeRequired">投稿を続けるには、著作権表示条項に同意する必要があります。</message>
-	<message key="author.submit.commentsForEditor">編集者へのコメント</message>
+	<message key="submission.submit.coverNote">編集者へのコメント</message>
 	<message key="author.submit.comments">コメントを入力してください（オプション）</message>
 	<message key="author.submit.form.sectionRequired">この投稿物にふさわしい雑誌セクションを選択してください。</message>
-	<message key="author.submit.privacyStatement">この雑誌のプライバシー情報の扱いについて</message>
+	<message key="submission.submit.privacyStatement">この雑誌のプライバシー情報の扱いについて</message>
 	<message key="author.submit.reorderInstructions">出版物に掲載される著者の並びを再度並び替える。</message>
 	<message key="author.submit.selectPrincipalContact">編集上の連絡を取る第一著者</message>
 	<message key="author.submit.addAuthor">著者の追加</message>
