--- a/ojs/locale/ml_IN/author.xml
+++ b/ojs/locale/ml_IN/author.xml
@@ -49,19 +49,19 @@
 	<message key="author.submit.howToSubmitNoPhone"><![CDATA[Encountering difficulties? Contact <a href="mailto:{$supportEmail}">{$supportName}</a> for assistance.]]></message>
 	<message key="author.submit.journalSection">ജേണല്‍ സെക്ഷന്‍</message>
 	<message key="author.submit.journalSectionDescription"><![CDATA[Select the appropriate section for this submission (see Sections and Policies in <a href="{$aboutUrl}" target="_new">About</a> the Journal).]]></message>
-	<message key="author.submit.selectSection">ദയവായി ഒരു സെക്ഷന്‍ തിരഞ്ഞെടുക്കുക...</message>
+	<message key="submission.submit.selectSection">ദയവായി ഒരു സെക്ഷന്‍ തിരഞ്ഞെടുക്കുക...</message>
 	<message key="author.submit.submissionLocale">സമര്‍പ്പണ ഭാഷ</message>
 	<message key="author.submit.submissionLocaleDescription">വിവിധ ഭാഷകളിലുള്ള സമര്‍പ്പണങ്ങള്‍ ഈ ജേണല്‍ സ്വീകരിക്കും.സമര്‍പ്പണത്തിന്റെ പ്രഥമ ഭാഷ താഴെ കാണുന്ന പുള്‍ ഡൗണ്‍ ഉപയോഗിച്ച് തിരഞ്ഞെടുക്കുക.</message>
-	<message key="author.submit.submissionChecklist">സബ്മിഷന്‍ ചെക്ക് ലിസ്റ്റ്</message>
-	<message key="author.submit.submissionChecklistDescription">താഴെ കാണുന്ന വിവരങ്ങള്‍ പരിശോധിച്ചുകൊണ്ട് ജേണല്‍ ഈ സമര്‍പ്പണത്തെ പരിഗണിക്കുന്നതിന് തയ്യാറാണെന്നതിനെ സൂചിപ്പിക്കുന്നു (ലേഖകനുള്ള അഭിപ്രായങ്ങള്‍ താഴെ ചേര്‍ക്കാവുന്നതാണ്).</message>
+	<message key="submission.submit.submissionChecklist">സബ്മിഷന്‍ ചെക്ക് ലിസ്റ്റ്</message>
+	<message key="submission.submit.submissionChecklistDescription">താഴെ കാണുന്ന വിവരങ്ങള്‍ പരിശോധിച്ചുകൊണ്ട് ജേണല്‍ ഈ സമര്‍പ്പണത്തെ പരിഗണിക്കുന്നതിന് തയ്യാറാണെന്നതിനെ സൂചിപ്പിക്കുന്നു (ലേഖകനുള്ള അഭിപ്രായങ്ങള്‍ താഴെ ചേര്‍ക്കാവുന്നതാണ്).</message>
 	<message key="author.submit.verifyChecklist">തുടരുന്നതിനു മുന്‍പ് സബ്മിഷന്‍ ചെക്ക് ലിസ്റ്റിലുള്ള എല്ലാ ഇനങ്ങളും തൃപ്തികരമാണെന്ന് ഉറപ്പു വരുത്തുക.</message>
 	<message key="author.submit.copyrightNoticeAgree">The authors agree to the terms of this Copyright Notice, which will apply to this submission if and when it is published by this journal (comments to the editor can be added below).</message>
 	<message key="author.submit.copyrightNoticeAgreeRequired">തുടരുന്നതിനു മുന്‍പ് കോപ്പി റൈറ്റ് നോട്ടീസിന്റെ സംജ്ഞകളുമായി താങ്കള്‍ അനുകൂലിക്കേണ്ടതുണ്ട്.</message>
-	<message key="author.submit.commentsForEditor">ലേഖകനായുള്ള അഭിപ്രായങ്ങള്‍</message>
+	<message key="submission.submit.coverNote">ലേഖകനായുള്ള അഭിപ്രായങ്ങള്‍</message>
 	<message key="author.submit.comments">ടെക്സ്റ്റ് ചേര്‍ക്കുക (ഐച്ഛികമായ)</message>
 	<message key="author.submit.form.sectionRequired">ദയവായി ഈ സമര്‍പ്പണത്തിന് ഉചിതമായ ജേണല്‍ സെക്ഷന്‍ തിരഞ്ഞെടുക്കൂ.</message>
 	<message key="author.submit.form.localeRequired">ദയവായി ഒരു സമര്‍പ്പണ ഭാഷ തിരഞ്ഞെടുക്കൂ.</message>
-	<message key="author.submit.privacyStatement">ജേണലിന്റെ സ്വകാര്യ പ്രസ്താവന</message>
+	<message key="submission.submit.privacyStatement">ജേണലിന്റെ സ്വകാര്യ പ്രസ്താവന</message>
 	<message key="author.submit.reorderInstructions">പ്രസിദ്ധീകരണത്തില്‍ പട്ടികപ്പെടുത്തിയിട്ടുള്ള ക്രമത്തില്‍ത്തന്നെ ലേഖകരെ പുനഃക്രമീകരിക്കുക.</message>
 	<message key="author.submit.reorder">ലേഖകന്റെ പേര് പുനഃക്രമീകരിക്കുക</message>
 	<message key="author.submit.selectPrincipalContact">എഡിറ്റോറിയല്‍ കറസ്പോണ്ടന്റിനായുള്ള പ്രഥമ കോണ്‍ടാക്റ്റ്.</message>
