--- a/ojs/locale/nl_NL/author.xml
+++ b/ojs/locale/nl_NL/author.xml
@@ -40,16 +40,16 @@
 	<message key="author.submit.howToSubmitNoPhone"><![CDATA[Problemen? Neem contact op met <a href="mailto:{$supportEmail}">{$supportName}</a> voor assistentie.]]></message>
 	<message key="author.submit.journalSection">Tijdschriftsectie</message>
 	<message key="author.submit.journalSectionDescription"><![CDATA[Kies de juiste sectie voor deze inzending (Zie Secties en beleid in <a href="{$aboutUrl}" target="_new">Over</a> het tijdschrift).]]></message>
-	<message key="author.submit.selectSection">Kies een sectie...</message>
-	<message key="author.submit.submissionChecklist">Checklist voor inzending</message>
-	<message key="author.submit.submissionChecklistDescription">Aangeven dat de inzending gereed is om bekeken te worden door het tijdschrift door de volgende aan te vinken (opmerkingen voor de redacteur kunnen hieronder later toegevoegd worden).</message>
+	<message key="submission.submit.selectSection">Kies een sectie...</message>
+	<message key="submission.submit.submissionChecklist">Checklist voor inzending</message>
+	<message key="submission.submit.submissionChecklistDescription">Aangeven dat de inzending gereed is om bekeken te worden door het tijdschrift door de volgende aan te vinken (opmerkingen voor de redacteur kunnen hieronder later toegevoegd worden).</message>
 	<message key="author.submit.verifyChecklist">U moet zich ervan verzekeren dat alle onderdelen van de inzendings-checklist zijn afgewerkt voordat u verdergaat.</message>
 	<message key="author.submit.copyrightNoticeAgree">De auteurs verklaren zich akkoord met de voorwaarden van deze auteursrecht verklaring die van toepassing is op deze inzending als het gepubliceerd wordt door dit tijdschrift (opmerkingen voor de redacteur kunnen hieronder later toegevoegd worden).</message>
 	<message key="author.submit.copyrightNoticeAgreeRequired">U moet akkoord gaan met de voorwaarden van de auteursrecht verklaring voor u door kunt gaan.</message>
-	<message key="author.submit.commentsForEditor">Opmerkingen voor de redacteur</message>
+	<message key="submission.submit.coverNote">Opmerkingen voor de redacteur</message>
 	<message key="author.submit.comments">Tekst opgeven (optioneel)</message>
 	<message key="author.submit.form.sectionRequired">Kies een geschikte tijdschriftsectie voor deze inzending.</message>
-	<message key="author.submit.privacyStatement">Privacybeleid van dit tijdschrift</message>
+	<message key="submission.submit.privacyStatement">Privacybeleid van dit tijdschrift</message>
 	<message key="author.submit.reorderInstructions">Verander de volgorde van de auteurs naar de volgorde zoals ze getoond worden bij de publicatie.</message>
 	<message key="author.submit.selectPrincipalContact">Eerste contactpersoon voor redactionele correspondentie.</message>
 	<message key="author.submit.addAuthor">Auteur toevoegen</message>
