--- a/ojs/locale/ro_RO/author.xml
+++ b/ojs/locale/ro_RO/author.xml
@@ -50,16 +50,16 @@
 	<message key="author.submit.howToSubmitNoPhone"><![CDATA[Întâmpini dificultăţi? Ia legătura cu <a href="mailto:{$supportEmail}">{$supportName}</a> pentru ajutor.]]></message>
 	<message key="author.submit.journalSection">Secţiune de revistă</message>
 	<message key="author.submit.journalSectionDescription"><![CDATA[Selectează secţiunea corespunzătoare pentru această propunere (vezi secţiunile şi politicile la secţiunea <a href="{$aboutUrl}" target="_new">despre</a> revistă).]]></message>
-	<message key="author.submit.selectSection">Selectează o secţiune...</message>
-	<message key="author.submit.submissionChecklist">Lista de verificare pentru propunere</message>
-	<message key="author.submit.submissionChecklistDescription">Indică faptul că această propunere este gata să fie luată în considerare de revistă prin verificarea următoarelor (comentariile către editor pot fi adăugate mai jos).</message>
+	<message key="submission.submit.selectSection">Selectează o secţiune...</message>
+	<message key="submission.submit.submissionChecklist">Lista de verificare pentru propunere</message>
+	<message key="submission.submit.submissionChecklistDescription">Indică faptul că această propunere este gata să fie luată în considerare de revistă prin verificarea următoarelor (comentariile către editor pot fi adăugate mai jos).</message>
 	<message key="author.submit.verifyChecklist">Trebuie să te asiguri că toate elementele din lista de verificare sunt îndeplinite pentru a continua.</message>
 	<message key="author.submit.copyrightNoticeAgree">Autorii sunt de acord cu termenii acestei note privind drepturile de autor, care se va aplica acestei propuneri dacă şi când este publicată de către această revistă (comentariile către editor pot fi adăugate mai jos).</message>
 	<message key="author.submit.copyrightNoticeAgreeRequired">Trebuie să fii de acord cu termenii privind drepturile de autor înainte de a continua.</message>
-	<message key="author.submit.commentsForEditor">Informații suplimentare pentru redactor(șef)/editor principal</message>
+	<message key="submission.submit.coverNote">Informații suplimentare pentru redactor(șef)/editor principal</message>
 	<message key="author.submit.comments">Introdu text (opţional)</message>
 	<message key="author.submit.form.sectionRequired">Selectează o secţiune corespunzătoare pentru această propunere.</message>
-	<message key="author.submit.privacyStatement">Declaraţia de confidenţialitate a revistei</message>
+	<message key="submission.submit.privacyStatement">Declaraţia de confidenţialitate a revistei</message>
 	<message key="author.submit.reorderInstructions">Reordonează autorii să apară în ordinea în care vor fi afișați în revistă.</message>
 	<message key="author.submit.reorder">Reorder author's name</message>
 	<message key="author.submit.selectPrincipalContact">Contactul principal pentru corespondenţa editorială.</message>
