--- a/pkp-lib/locale/en_US/manager.xml
+++ b/pkp-lib/locale/en_US/manager.xml
@@ -182,10 +182,12 @@
 	<message key="manager.setup.authorGuidelines">Author Guidelines</message>
 	<message key="manager.setup.competingInterests">Competing Interests</message>
 	<message key="manager.setup.competingInterestsDescription">Reviewers will be asked to comply with the competing interests disclosure policy you specify below.</message> <!-- FIXME #6843 (JM): should this just reference reviewers? -->
+	<message key="manager.setup.groupType">File type grouping</message>
 	<message key="manager.setup.reviewOptions.numWeeksPerResponse">Time allowed for review completion (weeks)</message>
 	<message key="manager.setup.reviewOptions.neverSendReminder">Never Remind</message>
 	<message key="manager.setup.reviewOptions.remindForInvite">Send a reminder if a reviewer has not responded to a review request within the following time (days):</message>
 	<message key="manager.setup.reviewOptions.remindForSubmit">Send a reminder if a reviewer has not submitted a recommendation within the following time (days):</message>
+	<message key="manager.setup.sortableByComponent">Sortable by component</message>s
 	<message key="manager.setup.sponsors">Sponsoring Organizations</message>
 	<message key="manager.setup.sponsors.note">You may add a note describing your sponsor relationship and policy; this will appear with the sponsor list on your About page.</message>
 	<message key="manager.setup.contributors.note">You may add a note describing the relationship and policy between you and your sources of support; this will appear with the Sources of Support list on your About page.</message>
@@ -388,4 +390,10 @@
 	<message key="settings.libraryFiles.category.permissions">Permissions</message>
 	<message key="settings.libraryFiles.category.reports">Reports</message>
 	<message key="settings.libraryFiles.category.other">Other</message>
+
+	<!--  Genre grid settings -->
+	<message key="grid.action.addGenre">Add a Genre</message>
+	<message key="grid.action.editGenre">Edit this Genre</message>
+	<message key="grid.action.deleteGenre">Delete this Genre</message>
+	<message key="grid.action.restoreGenres">Restore the Genres to the default settings</message>
 </locale>
