--- a/pkp-lib/locale/pt_BR/manager.xml
+++ b/pkp-lib/locale/pt_BR/manager.xml
@@ -241,4 +241,5 @@
 	<message key="plugins.categories.citationParser.description">Plugins de extração de citação extraem dados a nível de campos para citações cruas (ex.: autor, título, entre outros).</message>
 	<message key="plugins.categories.oaiMetadataFormats">Plugins de Formatos de Metadados OAI</message>
 	<message key="plugins.categories.oaiMetadataFormats.description">Os plugins de formato geram metadados para comunicação via protocolo OAI.</message>
+	<message key="grid.action.addGenre">Incluir gênero</message>
 </locale>
