--- a/pkp-lib/locale/en_US/submission.xml
+++ b/pkp-lib/locale/en_US/submission.xml
@@ -402,6 +402,7 @@
 	<message key="submission.submissionManuscript">Submission Manuscript</message>
 	<message key="submission.submissionReview">Submission Review</message>
 	<message key="submission.submitter">Submitter</message>
+	<message key="submission.submit.finishSubmission">Finish Submission</message>
 	<message key="submission.submit.selectFile">Select File</message>
 	<message key="submission.submit.fileInformation">File Information</message>
 	<message key="submission.submit.fileAdded">File Added</message>
