--- a/pkp-lib/locale/fr_CA/submission.xml
+++ b/pkp-lib/locale/fr_CA/submission.xml
@@ -160,6 +160,7 @@
 	<message key="submission.submissionHistory">Historique de la soumission</message>
 	<message key="submission.submissionManuscript">Manuscrit de la soumission</message>
 	<message key="submission.submissionReview">Évaluation de la soumission</message>
+	<message key="submission.submit.submissionComplete">Soumission complète</message>
 	<message key="submission.submit.submissionLocale">Langue de la soumission</message>
 	<message key="submission.submit.submissionLocaleDescription">Cette presse accepte les soumissions dans plusieurs langues. Veuillez sélectionner la langue principale de cette soumission à partir du menu déroulant.</message>
 	<message key="submission.submitter">Soumissionnaire</message>
