--- a/pkp-lib/locale/fr_CA/submission.xml
+++ b/pkp-lib/locale/fr_CA/submission.xml
@@ -373,4 +373,5 @@
 	<message key="submission.status.review">En cours d'évaluation</message>
 	<message key="submission.status.submission">En attente de la décision du rédacteur en chef</message>
 	<message key="submission.status.unassigned">Non assigné</message>
+	<message key="editor.submission.roundStatus.reviewsCompleted">Les révisions sont terminées.</message>
 </locale>
