*8212* partial port of workflow templates from OMP

--- a/pkp-lib/locale/en_US/submission.xml
+++ b/pkp-lib/locale/en_US/submission.xml
@@ -496,4 +496,7 @@
 	<message key="editor.submission.roundStatus.pendingReviews">Awaiting responses from reviewers.</message>
 	<message key="editor.submission.roundStatus.reviewsReady">New reviews ready.</message>
 	<message key="editor.submission.roundStatus.reviewsCompleted">Reviews completed.</message>
+
+	<!-- Participants -->
+	<message key="editor.submission.stageParticipants">Participants</message>
 </locale>
