--- a/pkp-lib/locale/en_US/submission.xml
+++ b/pkp-lib/locale/en_US/submission.xml
@@ -499,4 +499,15 @@
 
 	<!-- Participants -->
 	<message key="editor.submission.stageParticipants">Participants</message>
+	
+	<!-- Stage Participants grid -->
+	<message key="editor.submission.noneAssigned">None Assigned</message>
+	<message key="editor.submission.participant">Participant</message>
+	<message key="editor.submission.addStageParticipant">Add Participant</message>
+	<message key="editor.submission.addStageParticipant.description"><![CDATA[To add a participant to this stage of the submission, select a user group from the drop-down menu, then add a user.<br /><br />Note: The user will be added to all stages for which this user group is assigned.]]></message>
+	<message key="editor.submission.removeStageParticipant">Remove Participant</message>
+	<message key="editor.submission.removeStageParticipant.description"><![CDATA[You are about to remove this participant from <strong>all</strong> stages. If the user also have pending auditor tasks, they will be removed too.]]></message>
+	<message key="editor.submission.addStageParticipant.form.userGroupRequired">You must select a user group.</message>
+	<message key="editor.submission.addStageParticipant.form.userRequired">You must select a user for the specified user group.</message>
+
 </locale>
